docs/versioned_docs/version-0.8.0/api/mellea/plugins/hooks/validation.mdx
---
title: "mellea.plugins.hooks.validation"
sidebar_label: "mellea.plugins.hooks.validation"
description: "Validation hook payloads."
---

Validation hook payloads.





## Classes

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `ValidationPreCheckPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/validation.py#L13" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-validationprecheckpayload}


Payload for `validation_pre_check` — before requirement validation.

**Attributes:**
- `validation_id`: UUID correlating the pre/post hooks for a single
requirement-validation batch.
- `requirements`: List of [`Requirement`](../../core/requirement#class-requirement) instances to validate (writable).
- `target`: The [`CBlock`](../../core/base#class-cblock) being validated, or `None` when validating the full context.
- `context`: The [`Context`](../../core/base#class-context) used for validation.
- `model_options`: Dict of model options for backend-based validators (writable).


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `ValidationPostCheckPayload` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/plugins/hooks/validation.py#L34" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-validationpostcheckpayload}


Payload for `validation_post_check` — after validation completes.

Fires on every completing path: a normal check (any pass/fail mix) and an
unhandled exception. On the exception path `results` and the counts are empty.

**Attributes:**
- `validation_id`: UUID correlating with the matching `validation_pre_check`.
- `requirements`: List of [`Requirement`](../../core/requirement#class-requirement) instances that were evaluated.
- `results`: List of [`ValidationResult`](../../core/requirement#class-validationresult) instances (writable).
- `all_validations_passed`: `True` when every requirement passed (writable).
- `passed_count`: Number of requirements that passed.
- `failed_count`: Number of requirements that failed.
- `exception`: The exception raised during validation, or `None` when it completed.

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />
